--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -57,7 +57,7 @@ The total 4-momentum before collision is
 \end{equation}
 The total 4-momentum after collision is
 \begin{equation} \label{eq:pptot}
-  \mathbb{P}' = (E'+E_e,p\sin\theta-E'\sin\phi,0,p\cos\theta+E'\cos\phi)
+  \mathbb{P}' = (E'+E_e,-p\sin\theta+E'\sin\phi,0,p\cos\theta+E'\cos\phi)
 \end{equation}
 
 \framebreak
