--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -11,7 +11,7 @@
 % \usetheme{Marburg}
 % \usetheme{PaloAlto}
 %\title[Geek’s Night : Velha-A-Branca – March 2, 2010]{Introduction of Aspect Oriented Programming}
-%\author{Matheus Almeida \\ pg13530@alunos.uminho.pt}
+\author{Shih-Kai Lin}
 %\institute[UM]{University of Minho}
 \date{}
 \title{\texorpdfstring{$\nu e$}{nu-e} kinematics}
@@ -62,7 +62,7 @@ The total 4-momentum after collision is
 
 \framebreak
 
-Since 4-momentum is conserved before and after collision, we have equations
+Since total 4-momentum is conserved before and after collision, we have equations
 \begin{eqnarray}
   E'+E_e &=& E_\nu+m \label{eq:E} \\
   -p\sin\theta+E'\sin\phi &=& 0 \label{eq:ptotx} \\
