update document with python plots

--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -142,7 +142,7 @@ The differential cross section of $\nu_\mu e$ scattering is\footnotemark
 \begin{frame}{$\nu_\mu e$ dynamics II}
 \begin{figure}
 \centering
-  \includegraphics[width=\textwidth]{figures/diff_xsec.eps}
+  \includegraphics[width=\textwidth]{figures/xsec_cut_eff.eps}
 \end{figure}
 \end{frame}
 
