revision, update document with python plots

--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -139,10 +139,17 @@ The differential cross section of $\nu_\mu e$ scattering is\footnotemark
 \footnotetext[1]{\tiny Giunti C. and Kim C. W., \textit{Fundamentals of Neutrino Physics and Astrophysics}, 2007}
 \end{frame}
 
-\begin{frame}{$\nu_\mu e$ dynamics II}
+\begin{frame}{$\nu_\mu e$ dynamics II - angular cut efficiency}
+Define the angular cut efficiency as
+  \begin{equation}
+    \epsilon_\theta(\theta)=\frac{\int_{\cos\theta}^1 \frac{d\sigma}{d\cos\theta'}d\cos\theta'}{\int_0^1 \frac{d\sigma}{d\cos\theta'}d\cos\theta'}
+  \end{equation}
+\end{frame}
+
+\begin{frame}{$\nu_\mu e$ dynamics III}
 \begin{figure}
 \centering
-  \includegraphics[width=\textwidth]{figures/xsec_cut_eff.eps}
+  \includegraphics[width=.9\textwidth]{figures/xsec_cut_eff.eps}
 \end{figure}
 \end{frame}
 
