add dedicated python directory

--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -120,6 +120,25 @@ and see how close it is to $1$.
 
 \end{frame}
 
+\begin{frame}[allowframebreaks]{kinematics: squared momentum transfer}
+\scriptsize
+Suppose before collision the electron has four-momentum $p_2=(m,\vec{0})$. After collision it has four-momentum $p_4=(E,\vec{p}_4)$. The squared momentum transfer is
+\begin{eqnarray*}
+  Q^2 & \equiv & -(p_2-p_4)^2 \\
+  &=&-(p_2^2+p_4^2-2p_2\cdot p_4) \\
+  &=&2mE-2m^2 \\
+  &=&2m(E-m)
+\end{eqnarray*}
+Therefore,
+\begin{equation} \label{eq:sqptr}
+  \boxed{Q^2=2mT}
+\end{equation}
+, where $T$ is the kinetic energy of the outgoing electron. This is a renowned result for fixed target collisions. Write Eq.~\eqref{eq:sqptr} as a function of $\theta$, we have
+\begin{equation}
+  \frac{Q^2}{2m^2}=\frac{2\cos^2\theta}{\left( 1+\frac{m}{E_\nu} \right)^2-\cos^2\theta}
+\end{equation}
+\end{frame}
+
 \begin{frame}{$\nu_\mu e$ dynamics I}
 \tiny
 The differential cross section of $\nu_\mu e$ scattering is\footnotemark
