--- a/nu_on_e/documents/kinematics/nue_kinematics.tex
+++ b/nu_on_e/documents/kinematics/nue_kinematics.tex
@@ -137,6 +137,13 @@ Therefore,
 \begin{equation}
   \frac{Q^2}{2m^2}=\frac{2\cos^2\theta}{\left( 1+\frac{m}{E_\nu} \right)^2-\cos^2\theta}
 \end{equation}
+
+\framebreak
+\begin{figure}
+\centering
+  \includegraphics[width=.9\textwidth]{figures/Q2.eps}
+\end{figure}
+
 \end{frame}
 
 \begin{frame}{$\nu_\mu e$ dynamics I}
